--- a/lang/de/help/mods.html
+++ b/lang/de/help/mods.html
@@ -86,13 +86,13 @@
     Dokumente wie z. B. PDF, Office und &auml;hnliche Dokumente die zuvor auf
     den Server geladen werden m&uuml;ssen. Es besteht auch die M&ouml;glichkeit
     Materialien im HTML Format bereitzustellen und externer Web-Seiten in den
-    Kurs zu verkn&uuml;pfen. Eine Liste der m&ouml;glichen Formate finden Sie<a href="<?=$CFG->wwwroot?>/help.php?module=resource&file=resourcetype.html" target="_self">
+    Kurs zu verkn&uuml;pfen. Eine Liste der m&ouml;glichen Formate finden Sie<a href="<?php echo $CFG->wwwroot?>/help.php?module=resource&file=resourcetype.html" target="_self">
     hier</a>.</p>
 </blockquote>
 <p><IMG VALIGN=absmiddle SRC="http://moodle.org/mod/quiz/icon.gif">&nbsp;<B>Quiz</B></p>
 <blockquote>
   <p>Quizze erlauben dem Lehrer Tests zu entwerfen und bereitzustellen. Quizze
-    k&ouml;nnen <a href="<?=$CFG->wwwroot?>/help.php?module=quiz&file=questiontypes.html" target="_self">verschiedene
+    k&ouml;nnen <a href="<?php echo $CFG->wwwroot?>/help.php?module=quiz&file=questiontypes.html" target="_self">verschiedene
     Frageformen</a> beinhalten. Die einzelnen Fragen lassen sich in unterschiedlichen
     Kategorien ablegen. Aus den erstellten Fragen kann dann ein einzelnes Quiz
     zusammengestellt werden. So lassen sich alle Fragen mehrfach und in unterschiedlicher
@@ -119,7 +119,7 @@
     die als sinnvoll erachtet werden, das Lernen in Online-Umgebungen anzuregen
     und zu &uuml;berpr&uuml;fen. Lehrer k&ouml;nnen Daten von Ihren Sch&uuml;lern
     erheben, die Ihnen helfen, die Klasse besser kennenzulernen und ein Feedback
-    auf ihren eigenen Lehrstil zu erhalten. Momentan bietet Moodle nur <a href="<?=$CFG->wwwroot?>/help.php?module=moodle&file=surveys.html" target="_self">spezielle
+    auf ihren eigenen Lehrstil zu erhalten. Momentan bietet Moodle nur <a href="<?php echo $CFG->wwwroot?>/help.php?module=moodle&file=surveys.html" target="_self">spezielle
     Arten von Bewertungen</a> an.</p>
 </blockquote>
 <p><IMG VALIGN=absmiddle SRC="http://moodle.org/mod/choice/icon.gif">&nbsp;<B>Wahl</B></p>
