--- a/lang/de/help/reading.html
+++ b/lang/de/help/reading.html
@@ -6,5 +6,5 @@
 
 <P>Es kann auch helfen darüber nachzudenken, was uns der Autor NICHT sagen wollte oder worüber er uns im Zweifel ließ. Das kann Ihnen helfen, Fragen in Ihrem eigenen Kopf zu bilden.</P>  
 
-<P ALIGN=RIGHT><? helpbutton("questions", get_string("helpquestions"), "moodle", true, true) ?></P>
-<P ALIGN=RIGHT><? helpbutton("writing", get_string("helpwriting"), "moodle", true, true) ?></P>
+<P ALIGN=RIGHT><?php  helpbutton("questions", get_string("helpquestions"), "moodle", true, true) ?></P>
+<P ALIGN=RIGHT><?php  helpbutton("writing", get_string("helpwriting"), "moodle", true, true) ?></P>
