--- a/lang/de/help/textformat.html
+++ b/lang/de/help/textformat.html
@@ -17,7 +17,7 @@
 <P>Ihre unterbrochenen Linien werden erhalten und Leerzeilen starten neue Absätze.
 <P> Smileys wie :) bekommen automatisch ihr grafisches Aussehen. 
 <P>Sie können sogar HTML-Code einbetten falls Sie es wünschen und er wird beibehalten.
-<P ALIGN=RIGHT><? helpbutton("text", get_string("helptext")) ?> Mehr Informationen über Moodle Auto-Formatierung.</P>
+<P ALIGN=RIGHT><?php  helpbutton("text", get_string("helptext")) ?> Mehr Informationen über Moodle Auto-Formatierung.</P>
 </UL>
 
 <P><B>2. HTML Format</B></P>
@@ -28,7 +28,7 @@
 <P>Selbst wenn Sie nicht den Richtext HTML-Editor benutzen, können Sie HTML-Code in Ihrem Text benutzen, und es kommt genau das heraus, was sie beabsichtigen. 
 
 <P>Anders als beim Moodle Auto-Format wird keine automatische Formatierung durchgeführt. 
-<P ALIGN=RIGHT><? helpbutton("html", get_string("helphtml")) ?> Mehr Informationen über HTML</P>
-<P ALIGN=RIGHT><? helpbutton("richtext", get_string("helprichtext")) ?> Mehr Informationen über den Richtext HTML-Editor</P>
+<P ALIGN=RIGHT><?php  helpbutton("html", get_string("helphtml")) ?> Mehr Informationen über HTML</P>
+<P ALIGN=RIGHT><?php  helpbutton("richtext", get_string("helprichtext")) ?> Mehr Informationen über den Richtext HTML-Editor</P>
 </UL>
 
