--- a/lang/el/help/assignment/mods.html
+++ b/lang/el/help/assignment/mods.html
@@ -1,4 +1,4 @@
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/assignment/icon.gif">&nbsp;Αναθέσεις</P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/assignment/icon.gif">&nbsp;Αναθέσεις</P>
 <UL>
   <P>Οι αναθέσεις δίνουν τη δυνατότητα στον καθηγητή να καθορίσει μια εργασία 
     που απαιτεί από τους μαθητές να δημιουργήσουν ένα ψηφιακό μήνυμα (οποιασδήποτε 
