--- a/lang/el/help/choice/mods.html
+++ b/lang/el/help/choice/mods.html
@@ -1,4 +1,4 @@
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/choice/icon.gif">&nbsp;<B>Επιλογές</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/choice/icon.gif">&nbsp;<B>Επιλογές</B></P>
 <UL>
   <P>Μια δραστηριότητα επιλογής είναι πολύ απλή - ο καθηγητής κάνει μια ερώτηση 
     και καθορίζει μια επιλογή πολλαπλών απαντήσεων.Μπορεί να φανεί χρήσιμη σαν 
