--- a/lang/el/help/forum/mods.html
+++ b/lang/el/help/forum/mods.html
@@ -1,4 +1,4 @@
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/forum/icon.gif">&nbsp;<B>Ομάδες 
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/forum/icon.gif">&nbsp;<B>Ομάδες 
   συζητήσεων </B></P>
 <UL>
   <P>Αυτή η δραστηριότητα έιναι η πιο σημαντική - εδώ συμβαίνουν οι περισσότερες 
