--- a/lang/el/help/journal/mods.html
+++ b/lang/el/help/journal/mods.html
@@ -1,4 +1,4 @@
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/journal/icon.gif">&nbsp;<B>Καταγραφή 
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/journal/icon.gif">&nbsp;<B>Καταγραφή 
   Δραστηριότητας</B></P>
 <UL>
   <P>Αυτή η ενότητα είναι μια πολύ σημαντική κατοπτρική δραστηριότητα. Ο καθηγητής 
