--- a/lang/el/help/mods.html
+++ b/lang/el/help/mods.html
@@ -2,7 +2,7 @@
 
 <P>Το Moodle περιέχει μια μεγάλη κλίμακα μονάδων δραστηριότητας οι οποίες μπορούν να χρησιμοποιηθούν στη σταδιακή ανάπτυξη κάθε τύπου μαθήματος.</P>
 
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/forum/icon.gif">&nbsp;<B>Ομάδες συζητήσεων</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/forum/icon.gif">&nbsp;<B>Ομάδες συζητήσεων</B></P>
 <UL>
 <P>Αυτή η δραστηριότητα μπορεί να είναι και η πιο σημαντική - εδώ πραγματοποιούνται οι
    περισσότερες συζητήσες. 
@@ -12,7 +12,7 @@
    Ένας εκπαιδευτής μπορεί να επιβάλει την εγγραφή σε όλους.
 </UL>
 
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/journal/icon.gif">&nbsp;<B>Ημερολόγια</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/journal/icon.gif">&nbsp;<B>Ημερολόγια</B></P>
 <UL>
 <P>Αυτή η μονάδα είναι μια πολύ σημαντική δραστηριότητα.
    Ο εκπαιδευτής ζητάει απο το μαθητή να εκφραστεί σε ένα συγκεκριμένο θέμα και ο μαθητής μπορεί να επεξεργαστεί και να βελτιώσει την απάντησή του με το χρόνο. 
@@ -20,20 +20,20 @@
    Είναι συνήθως καλή ιδέα να έχετε μια δραστηριότητα Ημερολογίου κάθε εβδομάδα.</P>
 </UL>
 
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/resource/icon.gif">&nbsp;<B>Πόροι</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/resource/icon.gif">&nbsp;<B>Πόροι</B></P>
 <UL>
 <P>Οι πόροι είναι περιεχόμενο: πληροφορία την οποία ο εκπαιδευτής θέλει να εισάγει στο μάθημα.
    Αυτή μπορεί να είναι προετοιμασμένα αρχεία που φορτώνονται στο μάθημα, σελίδες που έχουν γραφτεί με το Moodle ή εξωτερικές σελίδες που κατασκευάστηκαν ώστε να είναι μέρος του μαθήματος.</P>
 </UL>
 
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/assignment/icon.gif">&nbsp;<B>Εργασίες</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/assignment/icon.gif">&nbsp;<B>Εργασίες</B></P>
 <UL>
 <P>Οι εργασίες επιτρέπουν στον εκπαιδευτή να καθορίσει μια δραστηριότητα η οποία θα απαιτεί από τους μαθητές να προετοιμάσουν ψηφιακό περιεχόμενο (οποιασδήποτε μορφής) και να το υποβάλουν φορτώνοντάς το στον εξυπηρετητή.
    Συνήθεις εργασίες είναι εκθέσεις, αναφορές, ασκήσεις κτλ. 
    Αυτή η μονάδα έχει και δυνατότητες βαθμολόγησης.</P>
 </UL>
 
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/quiz/icon.gif">&nbsp;<B>Κουίζ</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/quiz/icon.gif">&nbsp;<B>Κουίζ</B></P>
 <UL>
 <P>Αυτή η μονάδα επιτρέπει στον εκπαιδευτή να σχεδιάσει κουίζ, τα οποία αποτελούνται από ερωτήσεις πολλαπλών απαντήσεων, ερωτήσεις ναι-όχι και ερωτήσεις σύντομων απαντήσεων. 
    Αυτές οι ερωτήσεις τηρούνται σε μια κατηγοριοποιημένη βάση δεδομένων και μπορούν να χρησιμοποιηθούν ξανά.
@@ -42,13 +42,13 @@
    Αυτή η μονάδα έχει και δυνατότητες βαθμολόγησης.</P>
 </UL>
 
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/choice/icon.gif">&nbsp;<B>Επιλογές</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/choice/icon.gif">&nbsp;<B>Επιλογές</B></P>
 <UL>
 <P>Η δραστηριότητα αυτή είναι πολύ απλή - ο εκπαιδευτής υποβάλει μια ερώτηση και ορίζει ένα σύνολο πολλαπλών απαντήσεων.
    Μπορεί να είναι χρήσιμο σαν γρήγορη δημοσκόπηση ώστε αν προκαλέσει τον προβληματισμό πάνω σε ένα θέμα ή να δώσει στην τάξη τη δυνατότητα να ψηφίσει μια κατεύθυνση για το μάθημα ή να συλλέξει συγκατάθεση για μια έρευνα.</p>
 </UL>
 
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/survey/icon.gif">&nbsp;<B>Έρευνες</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/survey/icon.gif">&nbsp;<B>Έρευνες</B></P>
 <UL>
 <P>Η μονάδα Έρευνας παρέχει έναν αριθμό από εργαλεία έρευνας τα οποία έχει διαπιστωθεί πως είναι χρήσιμα στην εκτίμηση και διεγερση της μάθησης σε δικτυακά περιβάλλοντα.
    Οι εκπαιδευτές μπορούν να τα χρησιμοποιήσουν για να συλλέξουν δεδομένα από τους μαθητές τους τα οποία θα τους βοηθήσουν να βελτιώσουν την εκπαιδευτική δραστηριότητα.</P>
