--- a/lang/el/help/quiz/import.html
+++ b/lang/el/help/quiz/import.html
@@ -16,7 +16,7 @@ we become students of {=anatomy and physiology ~reflexology
 ~science ~experiment}, and in a sense we remain students for life.
 </BLOCKQUOTE>
 
-<P>More info: <? helpbutton("formatmissingword", "", "quiz") ?></P>
+<P>More info: <?php  helpbutton("formatmissingword", "", "quiz") ?></P>
 </UL>
 
 
@@ -35,7 +35,7 @@ we become students of {=anatomy and physiology ~reflexology
 <P>This module can import questions saved in Blackboard's export 
 format.  It relies on XML functions being compiled into your PHP.</P>
 
-<P>More info: <? helpbutton("formatblackboard", "", "quiz") ?></P>
+<P>More info: <?php  helpbutton("formatblackboard", "", "quiz") ?></P>
 </UL>
 
 <P><B>Custom</B></P>
@@ -46,7 +46,7 @@ format.  It relies on XML functions being compiled into your PHP.</P>
 <P>The amount of new code needed is quite small - just enough
    to parse a single question from given text.
 
-<P>More info: <? helpbutton("formatcustom", "", "quiz") ?></P>
+<P>More info: <?php  helpbutton("formatcustom", "", "quiz") ?></P>
 </UL>
 
 
