--- a/lang/el/help/quiz/mods.html
+++ b/lang/el/help/quiz/mods.html
@@ -1,4 +1,4 @@
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/quiz/icon.gif">&nbsp;<b>Κουίζ</b></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/quiz/icon.gif">&nbsp;<b>Κουίζ</b></P>
 <UL>
   <p>Αυτή η ενότητα δίνει τη δυνατότητα στον καθηγητή να σχεδιάσει και να δημιουργήσει 
     τεστ, που να περιέχουν ερωτήσεις πολλαπλής επιλογής, σωστό-λάθος και ερωτήσεις 
