--- a/lang/el/help/quiz/questiontypes.html
+++ b/lang/el/help/quiz/questiontypes.html
@@ -7,7 +7,7 @@
 <P>Προς απάντηση σε ένα ερώτημα (που μπορεί να περιλαμβάνει μια εικόνα) ο 
    ανταποκρινόμενος επιλέγει την απάντηση από μια σειρά πολλαπλών απαντήσεων.
    Υπάρχουν δυο τύποι ερωτήσεων πολλαπλής επιλογής - απλή απάντηση και πολλαπλή.
-<P>Περισσότερς πληροφορίες: <? helpbutton("multichoice", "", "quiz") ?></P>
+<P>Περισσότερς πληροφορίες: <?php  helpbutton("multichoice", "", "quiz") ?></P>
 </UL>
 
 <P><B>Σύντομη απάντηση</B></P>
@@ -16,7 +16,7 @@
    ανταποκρινόμενος γράφει μια λέξη ή φράση.  Μπρορεί να υπάρχουν αρκετές πιθανές σωστές απαντήσεις,
    με διαφορετικούς βαθμούς βαθμούς. Οι απαντήσεις μπορούν ή δε μπορούν να be sensitive to case.
 </P>
-<P>Περισσότερες πληροφορίες: <? helpbutton("shortanswer", "", "quiz") ?></P>
+<P>Περισσότερες πληροφορίες: <?php  helpbutton("shortanswer", "", "quiz") ?></P>
 </UL>
 
 <P><B>Αλήθεια/Ψέμα</B></P>
@@ -24,7 +24,7 @@
 <P>Προς απάντηση σε ένα ερώτημα (που μπορεί να περιλαμβάνει μια εικόνα) ο 
 ανταποκρινόμενος επιλέγει μεταξύ: Αλήθεια/Ψέμα.
 </P>
-<P>Περισσότερες πληροφορίες: <? helpbutton("truefalse", "", "quiz") ?></P>
+<P>Περισσότερες πληροφορίες: <?php  helpbutton("truefalse", "", "quiz") ?></P>
 </UL>
 
 <P><B>Τυχαία</B></P>
@@ -32,7 +32,7 @@
 <P>(Δεν έχει εφαρμοστεί ακόμα). Επιτρέπει την επιλογή ενός αριθμού από άλλες τις άλλες αρωτήσεις μια εκ των 
    οποίων διαλέγεται τυχαία κάθε φορ΄απου ένας μαθητής προσπαθεί το quiz.
 </P>
-<P>Περισσότερες πληροφορίες: <? helpbutton("random", "", "quiz") ?></P>
+<P>Περισσότερες πληροφορίες: <?php  helpbutton("random", "", "quiz") ?></P>
 </UL>
 
 
