--- a/lang/el/help/reading.html
+++ b/lang/el/help/reading.html
@@ -9,5 +9,5 @@
 <P>Μπορεί να σας βοηθήσει, αν σκεφτείτε τι ΔΕΝ είπε ο συγγραφέας ή τι άφησε υπο αμφισβήτηση 
    - αυτό μπορεί να σας βοηθήσει να σχηματίσετε ερωτήσεις στο μυαλό σας.</P>  
 
-<P ALIGN=RIGHT><? helpbutton("questions", get_string("helpquestions"), "moodle", true, true) ?></P>
-<P ALIGN=RIGHT><? helpbutton("writing", get_string("helpwriting"), "moodle", true, true) ?></P>
+<P ALIGN=RIGHT><?php  helpbutton("questions", get_string("helpquestions"), "moodle", true, true) ?></P>
+<P ALIGN=RIGHT><?php  helpbutton("writing", get_string("helpwriting"), "moodle", true, true) ?></P>
