--- a/lang/el/help/resource/resourcetype.html
+++ b/lang/el/help/resource/resourcetype.html
@@ -6,7 +6,7 @@
 <P><B>Απλό κείμενο</B> - Ο ευκολότερος τύπος.  Μπορείτε απλά να γράψετε (επεξεργαστείτε) τη σελίδα μέσα σε μία φόρμα 
 στην επόμενη σελίδα. Μερικά από αυτά που θα γράψετε θα ξανασχηματιστούν αυτόματα, όπως ακριβώς και στις δημοσιεύσεις 
 στις ομάδες συζητήσεων.  
-Δείτε την βοήθεια για την πληκρολόγηση κειμένου: <? helpbutton("text", get_string("helptext")) ?>
+Δείτε την βοήθεια για την πληκρολόγηση κειμένου: <?php  helpbutton("text", get_string("helptext")) ?>
 
 <P><B>HTML κείμενο</B> - για πίο προχωρημένους χρήστες.  Καμία αυτόματη διάταξη δεν εκτελείται, 
 πρέπει να τα κάνετε όλα μόνοι σας χρησιμοποιώντας HTML κώδικα.
