--- a/lang/el/help/textformat.html
+++ b/lang/el/help/textformat.html
@@ -22,7 +22,7 @@
 <P>Το τέλος κάθε γραμμής του κειμένου σας θα διατηρηθεί, και κενές γραμμές θα αρχίσουν καινούργιες παραγράφους.
 <P>Φατσούλες όπως :-) θα γίνουν αυτόματα το γραφικό τους αντίστοιχο. 
 <P>Μπορείτε ακόμα και να συμπεριλάβετε HTML κώδικά εαν θέλετε και θα εμφανιστεί κανονικά.
-<P ALIGN=RIGHT><? helpbutton("text", get_string("helptext")) ?> Περισσότερες πληροφορίες γιατην αυτόματη μορφοποίηση του Moodle.</P>
+<P ALIGN=RIGHT><?php  helpbutton("text", get_string("helptext")) ?> Περισσότερες πληροφορίες γιατην αυτόματη μορφοποίηση του Moodle.</P>
 </UL>
 
 <P><B>2. Μορφοποίηση HTML</B></P>
@@ -36,6 +36,6 @@
    στο κείμενο σας και θα παρουσιαστεί ακριβώς όπως σκοπεύεται.
 
 <P>Αντίθετα προσ την αυτόματη μορφοποίηση του Moodle, κανένας αυτοματισμός μορφοποίησης δεν εκτελείτε.
-<P ALIGN=RIGHT><? helpbutton("html", get_string("helphtml")) ?> Περισσότερες πληροφορίες σχετικά με την HTML</P>
-<P ALIGN=RIGHT><? helpbutton("richtext", get_string("helprichtext")) ?> Περισσότερες πληροφορίες σχετικά με τον εμπλουτισμένο κειμενογράφο της HTML</P>
+<P ALIGN=RIGHT><?php  helpbutton("html", get_string("helphtml")) ?> Περισσότερες πληροφορίες σχετικά με την HTML</P>
+<P ALIGN=RIGHT><?php  helpbutton("richtext", get_string("helprichtext")) ?> Περισσότερες πληροφορίες σχετικά με τον εμπλουτισμένο κειμενογράφο της HTML</P>
 </UL>
