--- a/lang/el/help/workshop/mods.html
+++ b/lang/el/help/workshop/mods.html
@@ -1,4 +1,4 @@
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/workshop/icon.gif">&nbsp;<B>Εργαστήριο</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/workshop/icon.gif">&nbsp;<B>Εργαστήριο</B></P>
 <UL>
   <P>Το Εργαστήριο είναι ένα είδος αξιολόγησης με μια τεράστια γκάμα επιλογών. 
     Επιτρέπει στους συμμετέχοντες να αξιολογήσουν τις μεταξύ τους εργασίες, καθώς 
