--- a/lang/el/help/writing.html
+++ b/lang/el/help/writing.html
@@ -18,6 +18,6 @@
    σχετικά με τα θέματα που συζητάτε.</P>
 
 
-<P ALIGN=RIGHT><? helpbutton("questions", get_string("helpquestions"), "moodle", true, true) ?></P>
-<P ALIGN=RIGHT><? helpbutton("reading", get_string("helpreading"), "moodle", true, true) ?></P>
-<P ALIGN=RIGHT><? helpbutton("ratings", get_string("separateandconnected"), "forum", true, true) ?></P>
+<P ALIGN=RIGHT><?php  helpbutton("questions", get_string("helpquestions"), "moodle", true, true) ?></P>
+<P ALIGN=RIGHT><?php  helpbutton("reading", get_string("helpreading"), "moodle", true, true) ?></P>
+<P ALIGN=RIGHT><?php  helpbutton("ratings", get_string("separateandconnected"), "forum", true, true) ?></P>
