--- a/lang/gl/help/richtext.html
+++ b/lang/gl/help/richtext.html
@@ -1,7 +1,7 @@
 <P ALIGN=CENTER><B>Sobre o editor Richtext HTML</B></P>
 
 <P>Disponibilidade: <B>
-<? if (!$CFG->htmleditor) {
+<?php  if (!$CFG->htmleditor) {
        print_string("htmleditordisabledadmin");
    } else if (!$USER->htmleditor) {
        print_string("htmleditordisabled");
