--- a/lang/ca/help/textformat.html
+++ b/lang/ca/help/textformat.html
@@ -30,10 +30,10 @@
     
   <p>A difer&egrave;ncia de l'Autoformat Moodle aqu&iacute; no hi ha formatatge autom&agrave;tic.</p>
   <P ALIGN=RIGHT> 
-    <? helpbutton("html", get_string("helphtml")) ?>
+    <?php  helpbutton("html", get_string("helphtml")) ?>
     M&eacute;s informaci&oacute; sobre HTML en Moodle</P>
   <P ALIGN=RIGHT> 
-    <? helpbutton("richtext", get_string("helprichtext")) ?>
+    <?php  helpbutton("richtext", get_string("helprichtext")) ?>
     M&eacute;s informaci&oacute; sobre l'editor de text enriquit HTML</P>
 
 </UL>
@@ -52,7 +52,7 @@
   <p>Aquest format utilitza una forma especial d'escriure text coneguda com format Wiki</p>
   <p>Aquest format permet escriure text de manera que segueix sent bastant llegible, per&ograve; que tamb&eacute; pot transformar-se autom&agrave;ticament en text HTML amb encap&ccedil;alaments, llistes i altres formatatges complexos.</p>
   <P ALIGN=RIGHT> 
-    <? helpbutton("wiki", get_string("helpwiki")) ?>
+    <?php  helpbutton("wiki", get_string("helpwiki")) ?>
     M&eacute;s informaci&oacute; sobre el format Wiki</P>
 </UL>
 
