--- a/lang/de/help/questions.html
+++ b/lang/de/help/questions.html
@@ -74,5 +74,5 @@
 <HR>
 <FONT SIZE=1><I>Questions adapted from Paul, R. (1993). Critical Thinking: How To Prepare Students for a Rapidly Changing World: Foundation for Critical Thinking, Santa Rosa, CA. </I></FONT>
 
-<P ALIGN=RIGHT><? helpbutton("writing", get_string("helpwriting"), "moodle", true, true) ?></P>
-<P ALIGN=RIGHT><? helpbutton("reading", get_string("helpreading"), "moodle", true, true) ?></P>
+<P ALIGN=RIGHT><?php  helpbutton("writing", get_string("helpwriting"), "moodle", true, true) ?></P>
+<P ALIGN=RIGHT><?php  helpbutton("reading", get_string("helpreading"), "moodle", true, true) ?></P>
