--- a/lang/de/help/writing.html
+++ b/lang/de/help/writing.html
@@ -10,6 +10,6 @@
 
 <P>Wenn Sie anderen antworten, versuchen Sie ihnen möglichst interessante Fragen zu stellen. Das hilft Ihnen und der anderen Person über das über das Diskussionsthema besser nachzudenken (und besser zu lernen).</P>
 
-<P ALIGN=RIGHT><? helpbutton("questions", get_string("helpquestions"), "moodle", true, true) ?></P>
-<P ALIGN=RIGHT><? helpbutton("reading", get_string("helpreading"), "moodle", true, true) ?></P>
-<P ALIGN=RIGHT><? helpbutton("ratings", get_string("separateandconnected"), "forum", true, true) ?></P>
+<P ALIGN=RIGHT><?php  helpbutton("questions", get_string("helpquestions"), "moodle", true, true) ?></P>
+<P ALIGN=RIGHT><?php  helpbutton("reading", get_string("helpreading"), "moodle", true, true) ?></P>
+<P ALIGN=RIGHT><?php  helpbutton("ratings", get_string("separateandconnected"), "forum", true, true) ?></P>
