--- a/lang/el/help/chat/mods.html
+++ b/lang/el/help/chat/mods.html
@@ -1,4 +1,4 @@
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/chat/icon.gif">&nbsp;<B>Chats</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/chat/icon.gif">&nbsp;<B>Chats</B></P>
 <UL>
   <P>Η ενότητα Chat επιτρέπει στους συμμετέχοντες να έχουν μια συγχρονισμένη συζήτηση 
     σε πραγματικό χρόνο στο Διαδίκτυο. Αυτός είναι ένας χρήσιμος τρόπος για να 
