--- a/lang/el/help/questions.html
+++ b/lang/el/help/questions.html
@@ -78,5 +78,5 @@
 <HR>
 <FONT SIZE=1><I>Η ερωτήσεις διασκευάστηκαν από το Critical Thinking: How To Prepare Students for a Rapidly Changing World: Foundation for Critical Thinking του Paul, R. (1993)., Santa Rosa, CA. </I></FONT>
 
-<P ALIGN=RIGHT><? helpbutton("writing", get_string("helpwriting"), "moodle", true, true) ?></P>
-<P ALIGN=RIGHT><? helpbutton("reading", get_string("helpreading"), "moodle", true, true) ?></P>
+<P ALIGN=RIGHT><?php  helpbutton("writing", get_string("helpwriting"), "moodle", true, true) ?></P>
+<P ALIGN=RIGHT><?php  helpbutton("reading", get_string("helpreading"), "moodle", true, true) ?></P>
