--- a/lang/el/help/resource/mods.html
+++ b/lang/el/help/resource/mods.html
@@ -1,4 +1,4 @@
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/resource/icon.gif">&nbsp;<B>Πόροι</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/resource/icon.gif">&nbsp;<B>Πόροι</B></P>
 <UL>
   <P>Οι πόροι είναι περιεχόμενο: πληροφορίες που θέλει να περάσει στο μάθημα ο 
     καθηγητής. Αυτά μπορεί να είναι προκαθορισμένα αρχεία φορτωμένα στον εξυπηρετητή 
