--- a/lang/el/help/survey/mods.html
+++ b/lang/el/help/survey/mods.html
@@ -1,4 +1,4 @@
-<P><IMG VALIGN=absmiddle SRC="<?=$CFG->wwwroot?>/mod/survey/icon.gif">&nbsp;<B>Έρευνες</B></P>
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/survey/icon.gif">&nbsp;<B>Έρευνες</B></P>
 <UL>
   <p>Η ενότητα Έρευνας παρέχει έναν αριθμό ελεγμένων οργάνων ερευνών που είναι 
     χρήσιμα στην αξιολόγηση και παρακίνηση της μάθησης σε online περιβάλλοντα. 
