Added email2, thanks Howard!   bug 1369

--- a/login/signup_form.html
+++ b/login/signup_form.html
@@ -8,6 +8,9 @@
    if (empty($user->email)) {
        $user->email = "";
    }
+   if (empty($user->email2)) {
+       $user->email2 = "";
+   }
    if (empty($user->firstname)) {
        $user->firstname = "";
    }
