--- a/mod/glossary/mod.html
+++ b/mod/glossary/mod.html
@@ -53,7 +53,7 @@ if (!isset($form->showspecial)) {
         $form->rssarticles = 0;
     }
 ?>
-<FORM name="form" method="post" action="<?=$ME ?>">
+<FORM name="form" method="post" action="<?php p($ME) ?>">
 <CENTER>
 <TABLE cellpadding=5>
 <TR valign=top>
