--- a/mod/glossary/editcategories.html
+++ b/mod/glossary/editcategories.html
@@ -9,7 +9,7 @@
 <tr valign=top>
     <td align=right><p><b><?php echo get_string("name") ?>:</b></p></td>
     <td>
-        <INPUT type="text" name="name" size=30 value="<?=$name ?>">
+        <INPUT type="text" name="name" size=30 value="<?php ($name) ?>">
     </td>
 </tr>
 <tr valign=top>
@@ -32,11 +32,11 @@
 </tr>
 <td colspan=2>
 	<p align=center>
-	<input type="hidden" name=id value="<?=$cm->id ?>">
-	<input type="hidden" name=action value="<?=$action?>">
+	<input type="hidden" name=id value="<?php p($cm->id) ?>">
+	<input type="hidden" name=action value="<?php p($action) ?>">
 	<input type="hidden" name=confirm value=1>
 	<input type="hidden" name=mode value='cat'>
-	<input type="hidden" name=hook value="<?=$hook?>">
+	<input type="hidden" name=hook value="<?php p($hook) ?>">
 	<input type="submit" value="<?php print_string("savechanges") ?>">
 	<input type="reset" value="<?php print_string("back","glossary") ?>"  onclick="javascript:history.go(-1);">
 	</P>
