Added some harcoded strings in glossary module (Bug 1062) (http://moodle.org/bugs/bug.php?op=show&bugid=1062)

--- a/mod/glossary/config.html
+++ b/mod/glossary/config.html
@@ -6,7 +6,7 @@
 
 <table cellpadding=9 cellspacing=0 >
 <tr valign=top>
-    <td colspan = 3 align=center><strong>Glossary Level Default Settings</strong></td>
+    <td colspan = 3 align=center><strong><?php print_string("glossaryleveldefaultsettings","glossary") ?></strong></td>
 </tr>
 <tr valign=top>
     <td align=right><p>glossary_entbypage:</td>
@@ -123,7 +123,7 @@
     </td>
 </tr>
 <tr valign=top>
-    <td colspan = 3 align=center><strong>Entry Level Default Settings</strong></td>
+    <td colspan = 3 align=center><strong><?php print_string("entryleveldefaultsettings","glossary") ?></strong></td>
 </tr>
 <tr valign=top>
     <td align=right><p>glossary_linkentries:</td>
@@ -189,7 +189,7 @@
     </td>
 </tr>
 <tr valign=top>
-    <td colspan = 3 align=center><a name=formats><strong>Display Formats Setup</strong></td>
+    <td colspan = 3 align=center><a name=formats><strong><?php print_string("displayformatssetup","glossary") ?></strong></td>
 </tr>
 <tr>
     <td colspan=3 align=center>
