--- a/lang/nl/help/wiki/wikitype.html
+++ b/lang/nl/help/wiki/wikitype.html
@@ -3,8 +3,8 @@
 <UL>
   <li>Een leraar kan altijd elke wiki van zijn vak bewerken</li>
   <li>Er zijn drie wiki-types: Leraar, Vak/Groep, Leerling</li>
-  <li>De activiteit kan in de Moodle groepmodi gezet worden: &quot;Geen groepen&quot; &quot;Gescheiden groepen&quot; en &quot;Zichtbare groepen&quot;</li>
-  <li>Dezelfde "Inhoud bij start" wordt voor alle groepen geplaatst</li>
+  <li>Deze activiteit heeft de Moodle groepmogeijkheden: &quot;Geen groepen&quot; &quot;Gescheiden groepen&quot; en &quot;Zichtbare groepen&quot;</li>
+  <li>De "Inhoud bij start" is voor alle groepen dezelfde.</li>
 </UL>
 
 Raadpleeg volgende matrix:
