Translated by Claudio Maggi

--- a/lang/it/help/assignment/assignmenttype.html
+++ b/lang/it/help/assignment/assignmenttype.html
@@ -1,13 +1,10 @@
-<P ALIGN=CENTER><B>Assignment Type</B></P>
+<P ALIGN=CENTER><B>Tipo di Compito</B></P>
 
-<P>There are different types of assignments</P>
+<P>Ci sono diversi tipi di compiti</P>
 
-<P><B>Offline activity</B> - this is useful when the assignment is performed outside
-of Moodle.  Students can see a description of the assignment, but can't upload files or anything.
-Teachers can grade all students though, and students will see notifications of their grades.
+<P><B>Attività offline</B> - questo è utile quando il compito è svolto fuori di Moodle. 
+Gli studenti possono vedere una descrizione del compito, ma non possono caricare files o altro.
+Comunque gli insegnanti possono dare un voto agli studenti, e gli stessi possono controllare i propri voti.
 
-<P><B>Upload a single file</B> - this type of assignment allows all students to upload a 
-single file, of any type.  This might be a Word processor document, or an image, a 
-zipped web site, or anything you ask them to submit.  Teachers can grade submitted 
-assignments online.
+<P><B>Caricamento di un file</B> - questo tipo di compito permette a tutti gli studenti di caricare un singolo file, di qualunque tipo. Il file può essere un documento Word, o un'immagine, o un sito web zippato, o qualunque cosa l'insegnante chiede di produrre e poi caricare. Gli insegnanti possono dare un voto ai compiti inviati.
 
