--- a/lang/it/help/assignment/resubmit.html
+++ b/lang/it/help/assignment/resubmit.html
@@ -1,9 +1,7 @@
-<P ALIGN=CENTER><B>Resubmitting assignments</B></P>
+<P ALIGN=CENTER><B>Risottomissione di compiti</B></P>
 
-<P>By default, students cannot resubmit assignments once the teacher has graded them</P>
+<P>Per default, gli studenti non possono risottomettere i compiti una volta che l'insegnante ha dato loro un voto</P>
 
-<P>If you turn this option on, then students will be allowed to resubmit assignments
-   after they have been graded (for you to re-grade).  This may be useful if the 
-   teacher wants to encourage students to do better work in an iterative process.</P>
+<P>Se si mette SI in questa opzione, viene permesso agli studenti di risottomettere (ri-inviare) i compiti dopo che soto stati oggetto di valutazione (affinché possano essere valutati di nuovo). Questo può essere utile se l'insegnante vuole incoraggiare gli studenti a lavorare sempre meglio in un processo iterativo.</P>
 
-<P>Obviously, this option is not relevant for offline assignments.</P>
+<P>Ovviamente, questa opzione non è rilevante per i compiti Offline.</P>
