Added missing Id: cvs tag. Bug 1394 http://moodle.org/bugs/bug.php?op=show&bugid=1394

--- a/mod/glossary/mod.html
+++ b/mod/glossary/mod.html
@@ -1,7 +1,5 @@
-<!-- This page defines the form to create or edit an instance of this module -->
-<!-- It is used from /course/mod.php.  The whole instance is available as $form. -->
-<?PHP
-/// stablishing hard-coded default parameters... Will be replaced soon by global settings.
+<?PHP  // $Id$
+
 global $CFG;
 
 if (!isset($form->studentcanpost)) {
