Hi !! Solved one bug before being posted to the Bugs System. Incredible !!! (http://moodle.org/mod/forum/discuss.php?d=8089) :-D

--- a/mod/glossary/edit.html
+++ b/mod/glossary/edit.html
@@ -146,11 +146,11 @@ if (isset($errors)) {
 <tr valign=top>
     <td align=right><p><b><?php print_string("attachment", "glossary") ?>:<br />(<?php print_string("optional") ?>)&nbsp;</b></p></td>
     <td>
-    <input type="hidden" name="MAX_FILE_SIZE" value="<?php echo get_max_upload_file_size() ?>">
+    <input type="hidden" name="MAX_FILE_SIZE" value="<?php echo get_max_upload_file_size($CFG->maxbytes, $course->maxbytes) ?>">
     <input type="file" name="attachment" size=40> 
     <?php 
        helpbutton("attachment", get_string("attachment", "glossary"), "glossary"); 
-       print_string("maxsize", "", display_size(get_max_upload_file_size())); 
+       print_string("maxsize", "", display_size(get_max_upload_file_size($CFG->maxbytes, $course->maxbytes))); 
     ?>
     </td>
 </tr>
