Now the Admin/Variables and Admin/Backup pages show a warning if XML support isn't enabled. Bug 1432 (http://moodle.org/bugs/bug.php?op=show&bugid=1432)

--- a/admin/config.html
+++ b/admin/config.html
@@ -447,7 +447,13 @@
     ?>
     </td>
     <td>
-    <?php print_string("configenablerssfeeds") ?>
+    <?php 
+        print_string("configenablerssfeeds");
+        //Check for required functions...
+        if(!function_exists('utf8_encode')) {
+            echo "<font color=\"red\"> You need to add XML support to your PHP installation.</font>";
+        } 
+    ?>
     </td>
 </tr>
 
