--- a/backup/backup_form.html
+++ b/backup/backup_form.html
@@ -14,7 +14,6 @@
         }
     }
 
-
     //Check site
     if (!$site = get_site()) {
         error("Site not found!");
@@ -110,7 +109,7 @@
         echo "</td><td>";
         $user_options[0] = get_string("all");
         $user_options[1] = get_string("course");
-        //$user_options[2] = get_string("needed");-->NOT IMPLEMENTED
+        $user_options[2] = get_string("none");
         choose_from_menu($user_options, "backup_users", $backup_users, "");
         echo "</td></tr>";
 
