--- a/backup/restore_form.html
+++ b/backup/restore_form.html
@@ -203,14 +203,20 @@ function selectItemInMenuByName(formId, menuName, selectIndex ) {
         echo "<td align=\"right\"><P><B>";
         echo get_string("users").":";
         echo "</td><td>";
-        //If all users are in the backup file
-        if ($info->backup_users == "all") {
-            $user_options[0] = get_string("all");
+        //If some user is present in the backup file
+        if ($info->backup_users == "all" or $info->backup_users == "course") {
+            //If all users are in the backup file
+            if ($info->backup_users == "all") {
+                $user_options[0] = get_string("all");
+            }
+            $user_options[1] = get_string("course");
+            $user_options[2] = get_string("none");
+            choose_from_menu($user_options, "restore_users", $restore_users, "");
+        } else {
+            echo get_string("none");
+            echo "<input type=\"hidden\" name=\"restore_users\" value=\"2\">";
+
         }
-        $user_options[1] = get_string("course");
-        $user_options[2] = get_string("none");
-        //$user_options[2] = get_string("needed");-->NOT IMPLEMENTED
-        choose_from_menu($user_options, "restore_users", $restore_users, "");
         echo "</td></tr>";
 
         //Now print the Logs tr
