Avoid some notices in edit page (debug=on) :-)

--- a/mod/scorm/mod.html
+++ b/mod/scorm/mod.html
@@ -2,11 +2,14 @@
     if (empty($form->name)) {
 	$form->name = "";
     }
+    if (empty($form->reference)) {
+	$form->reference = "";
+    }
     if (empty($form->summary)) {
 	$form->summary = "";
     }
-    if (empty($form->alltext)) {
-	$form->alltext = "";
+    if (empty($form->auto)) {
+	$form->auto = "";
     }
 ?>
 
