--- a/lang/en/help/resource/resourcetype.html
+++ b/lang/en/help/resource/resourcetype.html
@@ -17,6 +17,9 @@ you need to do it all manually using HTML codes.
 
 <P><B>Uploaded file</B> - displays any file you have uploaded into the course.  See the 'Files' section.
 
+<p><b>Directory</b> - dislays a whole directory (and subdirectories) from your course files area.
+Students can then browse and view all those files.</p>
+
 <P><B>Web link</B> - A URL to somewhere on the web.  When anyone clicks on this resource 
 activity they will be taken out of the course (the page you've specified will fill the browser window,
 or if you specify it, will launch in a completely new window).
