--- a/theme/standardlogo/header.html
+++ b/theme/standardlogo/header.html
@@ -18,10 +18,23 @@
 
 <?php if ($home) {  // This is what gets printed on the home page only  ?>
 
-  <table width="100%" cellpadding="10" cellspacing="0" border="0" class="headerhome">
+<?php if (file_exists("$CFG->dirroot/logo.jpg")) {
+          $standardlogo = "$CFG->wwwroot/logo.jpg";
+      } else if (file_exists("$CFG->dataroot/1/logo.jpg")) {
+          if (empty($CFG->slasharguments)) {
+              $standardlogo = "$CFG->wwwroot/file.php?file=/1/logo.jpg";
+          } else {
+              $standardlogo = "$CFG->wwwroot/file.php/1/logo.jpg";
+          }
+      } else {
+          $standardlogo = "$CFG->wwwroot/theme/$CFG->theme/logo.jpg";
+      }
+?>
+
+  <table width="100%" cellpadding="0" cellspacing="0" border="0" class="headerhome">
     <tr>
       <td valign="top" class="headerhomemain"><img 
-          border="0" src="<?php echo "$CFG->wwwroot/theme/$CFG->theme/logo.jpg" ?>"></td>
+          border="0" src="<?php echo $standardlogo ?>"></td>
       <td align="right" valign="top" class="headerhomemenu"><?php echo $menu ?></td>
     </tr>
   </table>
