Added to the CVS for the first time

--- a/lang/es/help/lesson/questionoption.html
+++ b/lang/es/help/lesson/questionoption.html
@@ -5,6 +5,6 @@
 <ol>
 <li><p><b>Elección múltiple</b> Es una variante de las preguntas de Opción Mútiple llamada de <b>&quot;Elección múltiple y respuestas múltiples"</b>.  Si escoge esta opción en la pregunta entonces requieren que el estudiante seleccione todas las respuestas correctas del conjunto de respuestas.  La pregunta puede o no decir al estudiante <i>cuántas</i> respuestas correctas existen. Por ejemplo "¿Cuáles han sido presidentes de E.E.U.U.?", o "Seleccione a dos presidentes de E.E.U.U. de la siguiente lista.".  El número de respuestas correctas pueden ser de <b>una</b> hasta todas las opciones.  (Una pregunta de Elección múltiples y respuestas múltiples con una respuesta correcta <b>es</b> diferente de una pregunta de Opción Múltiple pues la primera permite al estudiante la posibilidad de elegir más de una respuesta mientras que la última no lo permite.)</p></li>
 
-<li><p><b>La respuesta corta</b> Por defecto, en las comparaciones se ignora si el texto esta mayúsculas o minúsculas. Si se selecciona Opción de pregunta  las comparaciones tiene en cuenta si el texto esta mayúsculas o minúsculas.</p></li>
+<li><p><b>La respuesta corta</b> Por defecto, en las comparaciones se ignora si el texto está mayúsculas o minúsculas. Si se selecciona Opción de pregunta  las comparaciones tiene en cuenta si el texto está en mayúsculas o minúsculas.</p></li>
 
 <p>En los otros tipos de preguntas no afecta la Opción de pregunta.</p>
