--- a/lang/es/help/assignment/mods.html
+++ b/lang/es/help/assignment/mods.html
@@ -1,9 +1,9 @@
-<p><P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/assignment/icon.gif" /> <b>Tareas</b></p>
-
+<P><IMG VALIGN=absmiddle SRC="<?php echo $CFG->wwwroot?>/mod/assignment/icon.gif">&nbsp;<B>Tareas</B></P>
+<UL>
 <p>El módulo de tareas permite que el profesor asigne un
-trabajo a los alumnos, mismo que deberán preparar en
+trabajo a los alumnos que deberán preparar en
 algún medio digital (en cualquier formato) y presentarlo,
-subiendolo al servidor. Las tareas típicas incluyen ensayos,
-proyectos, fotografías, etc. Este módulo cuenta con
+subiéndolo al servidor. Las tareas típicas incluyen ensayos,
+proyectos, informes, etc. Este módulo cuenta con
 capacidad de calificación.</p>
-
+</UL>
